implement middleware
